k8s/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user-http-api
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: user-http-api
    spec:
      containers:
      - name: user-http-api
        image: quay.io/democracyworks/user-http-api:k8s-efae6e9
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
